# mm4cc-web

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  docker-compose.yml  main.py  nginx.conf  pyproject.toml
fixtures/: test1.md
src/: load_md.rs  main.rs  parse_md.rs
templates/: index.html.hbs  resume.html.hbs  stream.html.hbs
