[package]
name = "mm4cc-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.16"
gray_matter = "0.2"
rocket = "0.5.0"
serde = "1.0.196"
indoc = "2.0.4"
safe-path = "0.1.0"
rocket_ws = "0.1.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]
